test/TestSuite/Syntax/Errors/empty.tjp
# MARK: error 0 unexpctd_token
